// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PrivateLayout/> PrivateLayout snapshots user is on gamegroup page 1`] = `
<section>
  <aside />
  <main>
    <Connect(GameGroupContainer) />
  </main>
  <aside />
</section>
`;

exports[`<PrivateLayout/> PrivateLayout snapshots user is on gamegroup page 2`] = `
<section>
  <aside />
  <main>
    <withRouter(Connect(GameItemContainer)) />
  </main>
  <aside />
</section>
`;

exports[`<PrivateLayout/> PrivateLayout snapshots user is on login or signup page 1`] = `
<section>
  <aside />
  <main>
    <Feed />
  </main>
  <aside />
</section>
`;

exports[`<PrivateLayout/> PrivateLayout snapshots user is on profile page 1`] = `
<section>
  <aside />
  <main>
    <Connect(ProfileContainer) />
  </main>
  <aside />
</section>
`;
